did things right this time

--- a/index.html
+++ b/index.html
@@ -2,28 +2,69 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Star Trek Hangman</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+</head>
+
 <body>
-    <img id="trekPic" src="assets\images\Star_Trek.jpg" alt="Star Trek">
+    <div class="container">
+        <div class="jumbotron">
+            <img id="trekPic" src="assets\images\Star_Trek.jpg">
+            <h1>Star Trek Hangman</h1>
+            <p>Press any key to start!</p>
 
-    <div id="wrongGuesses">
+        </div>
+
+        <div class="panel panel=defualt">
+            <div class="panel-heading">
+                <h3 class="panel-title">Word to Guess</h3>
+            </div>
+        </div>
+
+
+        <div class="panel -body">
+            <h2 id="wordToGuess">_ _ _ _ _ _ _</h2>
+        </div>
+
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Wrong Guesses: <span id="wrongGuesses"></span>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Guesses Left: <span id="numGuesses">9</span>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Win Counter: <span id="winCounter">0</span>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Loss Counter: <span id="lossCounter">0</span>
+            </div>
+        </div>
+
+
 
     </div>
 
-    <div id="contentArea">
-
-        
-    </div>
 
 
 
 </body>
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </html>
