--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron">
+        <div class="picContainer">
             <img id="trekPic" src="assets\images\Star_Trek.jpg">
-            <h1>Star Trek Hangman</h1>
-            <p>Press any key to start!</p>
 
         </div>
+
+        <div class="gameInfo">
+            <h1>Star Trek Hangman</h1>
+            <p>Press any key to start!</p>
+        </div>
+
+
 
         <div class="panel panel=defualt">
             <div class="panel-heading">
